--- a/Health/app/src/main/res/layout/fragment_sleep.xml
+++ b/Health/app/src/main/res/layout/fragment_sleep.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@drawable/night"
-    tools:context=".FragmentWater">
+    tools:context=".FragmentSleep">
 
     <LinearLayout
         android:layout_width="match_parent"
