--- a/Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Health/app/src/main/res/layout/fragment_profile.xml
@@ -40,6 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:gravity="center"
             android:text="Имя Фамилия"
             android:textSize="35sp"
